@@ -1,3 +1,14 @@
+2009-10-07  Lluis Sanchez Gual  <lluis@novell.com>
+
+	* MonoDevelop.AddinAuthoring/AddinDescriptionView.cs:
+	* MonoDevelop.AddinAuthoring/AddinAuthoringService.cs: Improve
+	formatting of saved .addin files.
+
+	* MonoDevelop.AddinAuthoring/AddinData.cs: Remove debug code.
+
+	* MonoDevelop.AddinAuthoring.CodeCompletion/CodeCompletionExtension.cs:
+	Track api changes.
+
 2009-10-01  Lluis Sanchez Gual  <lluis@novell.com>
 
 	* gtk-gui/gui.stetic:
